# list_manager

./: .haproxy.cfg  Makefile
backend/: .flake8  .gitignore  manage.py  pyproject.toml
backend/api/: apps.py  conftest.py  schemas.py  settings.py  urls.py
backend/api/base/: hooks.py  models.py
backend/api/lib/: dbutils.py
backend/api/list/: apps.py  models.py  schema.py  types.py
backend/api/list/migrations/: 0001_initial.py  0002_initial.py  0003_alter_list_participants.py  0004_alter_list_description.py  0005_remove_listitem_is_public_list_threshold.py
backend/api/list/tests/: test_models.py  test_schema.py
backend/api/tests/: base.py  faker.py  utils.py
backend/api/user/: models.py  schema.py  types.py
backend/api/user/migrations/: 0001_initial.py
backend/api/user/tests/: test_models.py
frontend/: .gitignore  package.json
frontend/core/: package.json
